using SmilingCup_Backend.product.domain.model.aggregates;
using SmilingCup_Backend.Shared.domain.repositories;

namespace SmilingCup_Backend.product.domain.repositories;

public interface ICoffeeRepository : IBaseRepository<Coffee>
{
    
}